@@ -23,6 +23,9 @@ import java.util.Calendar;
 import java.util.LinkedHashMap;
 import java.util.Map;
 
+import org.sef4j.callstack.CallStackElt.StackPopper;
+import org.sef4j.callstack.LocalCallStack;
+
 /**
  * 
  */
@@ -65,30 +68,41 @@ public class SefPreparedStatementProxy extends SefStatementProxy implements Prep
         return sqlQuery;
     }
     
-    public ParamInfo paramInfoFor(int index) {
+    /** internal */
+    protected ParamInfo paramInfoFor(int index) {
         if (paramByIndex == null) {
             this.paramByIndex = new LinkedHashMap<Integer,ParamInfo>();
         }
         ParamInfo paramInfo = paramByIndex.get(index);
         if (paramInfo == null) {
-            paramInfo = new ParamInfo(index);
+            paramInfo = new ParamInfo(null, index);
             paramByIndex.put(index, paramInfo);
         }
         return paramInfo;
     }
 
-    public ParamInfo paramInfoFor(String name) {
+    /** internal */
+    protected ParamInfo paramInfoFor(String name) {
         if (paramByName == null) {
             this.paramByName = new LinkedHashMap<String,ParamInfo>();
         }
         ParamInfo paramInfo = paramByName.get(name);
         if (paramInfo == null) {
-            paramInfo = new ParamInfo(name);
+            paramInfo = new ParamInfo(name, 0);
             paramByName.put(name, paramInfo);
         }
         return paramInfo;
     }
 
+    protected ParamInfo onSetParamValue(int index, Object value) {
+        return paramInfoFor(index).value(value);
+    }
+
+    protected ParamInfo onSetParamValue(String name, Object value) {
+        return paramInfoFor(name).value(value);
+    }
+    
+    
     /** internal */
     protected void resetParamInfos() {
         this.paramByName = null;
@@ -99,404 +113,360 @@ public class SefPreparedStatementProxy extends SefStatementProxy implements Prep
     // ------------------------------------------------------------------------
 
     public final ResultSet executeQuery() throws SQLException {
-        ResultSet res;
-        pre("executeQuery", "");
+        StackPopper toPop = LocalCallStack.meth("executeQuery").push();
         try {
-            res = to.executeQuery();
-            if (res != null) {
-                res = wrapResultSet(res);
-                postDefaultRes(res);
-            } else {
-                postRes("NULL ResultSet");
-            }
-        } catch (SQLException ex) {
-            postEx(ex);
-            throw ex;
+            ResultSet tmpres = to.executeQuery();
+
+            SefResultSetProxy res = new SefResultSetProxy(this, tmpres);
+            return LocalCallStack.pushPopParentReturn(res);
+        } catch(SQLException ex) {
+            throw LocalCallStack.pushPopParentException(ex);
+        } catch(RuntimeException ex) {
+            throw LocalCallStack.pushPopParentException(ex);
+        } finally {
+            toPop.close();
         }
-        return res;
     }
 
     public final int executeUpdate() throws SQLException {
-        int res;
-        pre("executeUpdate", "");
+        StackPopper toPop = LocalCallStack.meth("executeUpdate").push();
         try {
-            res = to.executeUpdate();
-            ownerSefWrappedConnection.incrCountExecuteUpdate(sqlQuery); //unformatted prepared statment, without params
-            postRes(new Integer(res));
-        } catch (SQLException ex) {
-            postEx(ex);
-            throw ex;
+            int res = to.executeUpdate();
+
+            return LocalCallStack.pushPopParentReturn(res);
+        } catch(SQLException ex) {
+            throw LocalCallStack.pushPopParentException(ex);
+        } catch(RuntimeException ex) {
+            throw LocalCallStack.pushPopParentException(ex);
+        } finally {
+            toPop.close();
         }
-        return res;
     }
 
     public final boolean execute() throws SQLException {
-        boolean res;
-        pre("execute", "");
+        StackPopper toPop = LocalCallStack.meth("execute").push();
         try {
-            res = to.execute();
-            ownerSefWrappedConnection.incrCountExecute(sqlQuery); //unformatted prepared statment, without params
-            if (res)
-                postDefaultRes((res) ? Boolean.TRUE : Boolean.FALSE);
-            else
-                postRes("false");
-        } catch (SQLException ex) {
-            postEx(ex);
-            throw ex;
+            boolean res = to.execute();
+
+            return LocalCallStack.pushPopParentReturn(res);
+        } catch(SQLException ex) {
+            throw LocalCallStack.pushPopParentException(ex);
+        } catch(RuntimeException ex) {
+            throw LocalCallStack.pushPopParentException(ex);
+        } finally {
+            toPop.close();
         }
-        return res;
     }
 
     public final void addBatch() throws SQLException {
-        pre("addBatch", "");
+        StackPopper toPop = LocalCallStack.meth("addBatch").push();
         try {
             to.addBatch();
-            postVoid();
-        } catch (SQLException ex) {
-            postEx(ex);
-            throw ex;
+
+        } catch(SQLException ex) {
+            throw LocalCallStack.pushPopParentException(ex);
+        } catch(RuntimeException ex) {
+            throw LocalCallStack.pushPopParentException(ex);
+        } finally {
+            toPop.close();
         }
     }
 
     public final ResultSetMetaData getMetaData() throws SQLException {
-        ResultSetMetaData res;
-        pre("getMetaData", "");
+        StackPopper toPop = LocalCallStack.meth("getMetaData").push();
         try {
-            res = to.getMetaData();
-            postDefaultRes(res);
-        } catch (SQLException ex) {
-            postEx(ex);
-            throw ex;
+            ResultSetMetaData tmpres = to.getMetaData();
+
+            // may wrap ... new SefResultSetMetaDataProxy(tmpres);
+            return tmpres;
+        } catch(SQLException ex) {
+            throw LocalCallStack.pushPopParentException(ex);
+        } catch(RuntimeException ex) {
+            throw LocalCallStack.pushPopParentException(ex);
+        } finally {
+            toPop.close();
         }
-        return res;
     }
 
     public final ParameterMetaData getParameterMetaData() throws SQLException {
-        return to.getParameterMetaData();
+        StackPopper toPop = LocalCallStack.meth("getParameterMetaData").push();
+        try {
+            return to.getParameterMetaData();
+
+            // may wrap ... new SefParameterMetaDataProxy(tmpres);
+        } catch(SQLException ex) {
+            throw LocalCallStack.pushPopParentException(ex);
+        } catch(RuntimeException ex) {
+            throw LocalCallStack.pushPopParentException(ex);
+        } finally {
+            toPop.close();
+        }
     }
 
     // implements java.sql.PreparedStatement, save param value + delegate to underlying  
     // -------------------------------------------------------------------------
 
     public final void clearParameters() throws SQLException {
-        params.clear();
-        setParamChanged();
-        to.clearParameters();
+        StackPopper toPop = LocalCallStack.meth("clearParameters").push();
+        try {
+            to.clearParameters();
+            clearParameters(); // also clear in-memory ParamInfo
+
+        } catch(SQLException ex) {
+            throw LocalCallStack.pushPopParentException(ex);
+        } catch(RuntimeException ex) {
+            throw LocalCallStack.pushPopParentException(ex);
+        } finally {
+            toPop.close();
+        }
     }
 
     public final void setNull(int parameterIndex, int sqlType) throws SQLException {
-        ParamInfo p = new ParamInfo(false, sqlType);
-        set(parameterIndex, p);
+        onSetParamValue(parameterIndex, null).sqlType(sqlType);
         to.setNull(parameterIndex, sqlType);
     }
 
     public final void setNull(int parameterIndex, int sqlType, String typeName) throws SQLException {
-        ParamInfo p = new ParamInfo(false, sqlType);
-        p.setTypeName(typeName);
+        onSetParamValue(parameterIndex, null).sqlType(sqlType).typeName(typeName);
         to.setNull(parameterIndex, sqlType, typeName);
     }
 
     public final void setBoolean(int parameterIndex, boolean x) throws SQLException {
-        set(parameterIndex, (x)? "'1'" : "'0'");
+        onSetParamValue(parameterIndex, Boolean.valueOf(x));
         to.setBoolean(parameterIndex, x);
     }
 
     public final void setByte(int parameterIndex, byte x) throws SQLException {
-        set(parameterIndex, new Byte(x));
+        onSetParamValue(parameterIndex, Byte.valueOf(x));
         to.setByte(parameterIndex, x);
     }
 
     public final void setShort(int parameterIndex, short x) throws SQLException {
-        set(parameterIndex, new Short(x));
+        onSetParamValue(parameterIndex, Short.valueOf(x));
         to.setShort(parameterIndex, x);
     }
 
     public final void setInt(int parameterIndex, int x) throws SQLException {
-        set(parameterIndex, new Integer(x));
+        onSetParamValue(parameterIndex, Integer.valueOf(x));
         to.setInt(parameterIndex, x);
     }
 
     public final void setLong(int parameterIndex, long x) throws SQLException {
-        set(parameterIndex, new Long(x));
+        onSetParamValue(parameterIndex, Long.valueOf(x));
         to.setLong(parameterIndex, x);
     }
 
     public final void setFloat(int parameterIndex, float x) throws SQLException {
-        set(parameterIndex, new Float(x));
+        onSetParamValue(parameterIndex, Float.valueOf(x));
         to.setFloat(parameterIndex, x);
     }
 
     public final void setDouble(int parameterIndex, double x) throws SQLException {
-        set(parameterIndex, new Double(x));
+        onSetParamValue(parameterIndex, Double.valueOf(x));
         to.setDouble(parameterIndex, x);
     }
 
     public final void setBigDecimal(int parameterIndex, BigDecimal x) throws SQLException {
-        set(parameterIndex, x);
+        onSetParamValue(parameterIndex, x);
         to.setBigDecimal(parameterIndex, x);
     }
 
     public final void setString(int parameterIndex, String x) throws SQLException {
-        set(parameterIndex, "'" + x + "'");
+        onSetParamValue(parameterIndex, x);
         to.setString(parameterIndex, x);
     }
 
     public final void setBytes(int parameterIndex, byte[] x) throws SQLException {
-        set(parameterIndex, x);
+        onSetParamValue(parameterIndex, x);
         to.setBytes(parameterIndex, x);
     }
-
     
     public final void setDate(int parameterIndex, Date x) throws SQLException {
-        set(parameterIndex, ParamInfo.formatOracleToDate(x));
+        onSetParamValue(parameterIndex, x);
         to.setDate(parameterIndex, x);
     }
 
     public final void setTime(int parameterIndex, Time x) throws SQLException {
-        set(parameterIndex, ParamInfo.formatOracleToTime(x));
+        onSetParamValue(parameterIndex, x);
         to.setTime(parameterIndex, x);
     }
 
     public final void setTimestamp(int parameterIndex, Timestamp x) throws SQLException {
-        set(parameterIndex, ParamInfo.formatOracleToTimestamp(x));
+        onSetParamValue(parameterIndex, x);
         to.setTimestamp(parameterIndex, x);
     }
 
     public final void setDate(int parameterIndex, Date x, Calendar cal) throws SQLException {
-        set(parameterIndex, ParamInfo.formatOracleToDate(x, cal));
-        //        set(parameterIndex, new ValueDateWithCal(x,cal));
+        onSetParamValue(parameterIndex, new ParamInfo.PairDateWithCalendar(x, cal));
         to.setDate(parameterIndex, x, cal);
     }
 
     public final void setTime(int parameterIndex, Time x, Calendar cal) throws SQLException {
-        set(parameterIndex, ParamInfo.formatOracleToTime(x, cal));
-        //        set(parameterIndex, new ValueDateWithCal(x,cal));
+        onSetParamValue(parameterIndex, new ParamInfo.PairDateWithCalendar(x, cal));
         to.setTime(parameterIndex, x, cal);
     }
 
     public final void setTimestamp(int parameterIndex, Timestamp x, Calendar cal) throws SQLException {
-        set(parameterIndex, ParamInfo.formatOracleToTimestamp(x, cal));
-        //        set(parameterIndex, new ValueDateWithCal(x,cal));
+        onSetParamValue(parameterIndex, new ParamInfo.PairDateWithCalendar(x, cal));
         to.setTimestamp(parameterIndex, x, cal);
     }
 
     public final void setArray(int parameterIndex, Array x) throws SQLException {
-        set(parameterIndex, objToString(x.getArray()));
+        onSetParamValue(parameterIndex, x);
         to.setArray(parameterIndex, x);
     }
 
     public final void setRef(int parameterIndex, Ref x) throws SQLException {
-        set(parameterIndex, x);
+        onSetParamValue(parameterIndex, x);
         to.setRef(parameterIndex, x);
     }
 
     public final void setObject(int parameterIndex, Object x, int targetSqlType, int scale) throws SQLException {
-        ParamInfo p = new ParamInfo(x);
-        p.setTargetSqlType(targetSqlType);
-        p.setScale(scale);
-        set(parameterIndex, p);
+        onSetParamValue(parameterIndex, x).targetSqlType(targetSqlType).scale(scale);
         to.setObject(parameterIndex, x, targetSqlType, scale);
     }
 
     public final void setObject(int parameterIndex, Object x, int targetSqlType) throws SQLException {
-        ParamInfo p = new ParamInfo(x);
-        p.setTargetSqlType(targetSqlType);
-        set(parameterIndex, p);
+        onSetParamValue(parameterIndex, x).targetSqlType(targetSqlType);
         to.setObject(parameterIndex, x, targetSqlType);
     }
 
     public final void setObject(int parameterIndex, Object x) throws SQLException {
-        String text;
-        if (x == null) {
-            text = "'null'";
-        } else {
-            Class cl = x.getClass();
-            if (cl.isPrimitive()) {
-                text = x.toString();
-            } else {
-                text = objToString(x);
-            }
-        }
-        set(parameterIndex, text);
-
+        onSetParamValue(parameterIndex, x);
         to.setObject(parameterIndex, x);
     }
 
     public final void setAsciiStream(int parameterIndex, InputStream x, int length) throws SQLException {
-        set(parameterIndex, new ParamInfo("'--AsciiStream.. (not  supported  in log) length:" + length + "--'"));
+        onSetParamValue(parameterIndex, new ParamInfo.PairValueWithLength(x, length));
         to.setAsciiStream(parameterIndex, x, length);
     }
 
+    @Deprecated
     public final void setUnicodeStream(int parameterIndex, InputStream x, int length) throws SQLException {
-        set(parameterIndex, new ParamInfo("'--UnicodeStream.. (not  supported  in log) length:" + length + "--'"));
+        onSetParamValue(parameterIndex, new ParamInfo.PairValueWithLength(x, length));
         to.setUnicodeStream(parameterIndex, x, length); // deprecated
     }
 
     public final void setBinaryStream(int parameterIndex, InputStream x, int length) throws SQLException {
-        set(parameterIndex, new ParamInfo("'--BinaryStream.. (not  supported  in log) length:" + length + "--'"));
+        onSetParamValue(parameterIndex, new ParamInfo.PairValueWithLength(x, length));
         to.setBinaryStream(parameterIndex, x, length);
     }
 
     public final void setCharacterStream(int parameterIndex, Reader reader, int length) throws SQLException {
-        set(parameterIndex, new ParamInfo("'--CharacterStream.. (not  supported  in log) length:" + length + "--'"));
+        onSetParamValue(parameterIndex, new ParamInfo.PairValueWithLength(reader, length));
         to.setCharacterStream(parameterIndex, reader, length);
     }
 
     public final void setBlob(int parameterIndex, Blob x) throws SQLException {
-        set(parameterIndex, new ParamInfo("'--Blob.. (not  supported  in log)--'"));
+        onSetParamValue(parameterIndex, x);
         to.setBlob(parameterIndex, x);
     }
 
     public final void setClob(int parameterIndex, Clob x) throws SQLException {
-        set(parameterIndex, new ParamInfo("'--Clob.. (not  supported  in log)--'"));
+        onSetParamValue(parameterIndex, x);
         to.setClob(parameterIndex, x);
     }
 
     public final void setURL(int parameterIndex, URL x) throws SQLException {
-        set(parameterIndex, x);
+        onSetParamValue(parameterIndex, x);
         to.setURL(parameterIndex, x);
     }
 
-    // ------------------------------------------------------------------------
-    
-    public void setAsciiStream(int parameterIndex, InputStream x) throws SQLException {
-        to.setAsciiStream(parameterIndex, x);
-    }
-
-    public void setAsciiStream(int parameterIndex, InputStream x, long length) throws SQLException {
-        to.setAsciiStream(parameterIndex, x, length);
-    }
-
-    public void setBinaryStream(int parameterIndex, InputStream x) throws SQLException {
-        to.setBinaryStream(parameterIndex, x);
-    }
-
-    public void setBinaryStream(int parameterIndex, InputStream x, long length) throws SQLException {
-        to.setBinaryStream(parameterIndex, x, length);
-    }
-
-    public void setBlob(int parameterIndex, InputStream x) throws SQLException {
-        to.setBlob(parameterIndex, x);
-    }
-
-    public void setBlob(int parameterIndex, InputStream x, long length) throws SQLException {
-        to.setBlob(parameterIndex, x, length);
-    }
-
-    public void setCharacterStream(int parameterIndex, Reader x) throws SQLException {
-        to.setCharacterStream(parameterIndex, x);
-    }
-
-    public void setCharacterStream(int parameterIndex, Reader x, long length) throws SQLException {
-        to.setCharacterStream(parameterIndex, x, length);
-    }
-
-    public void setClob(int parameterIndex, Reader x) throws SQLException {
-        to.setClob(parameterIndex, x);
-    }
-
-    public void setClob(int parameterIndex, Reader x, long length) throws SQLException {
-        to.setClob(parameterIndex, x, length);
-    }
-
-    public void setNCharacterStream(int parameterIndex, Reader x) throws SQLException {
-        to.setNCharacterStream(parameterIndex, x);
-    }
-
-    public void setNCharacterStream(int parameterIndex, Reader x, long length) throws SQLException {
-        to.setNCharacterStream(parameterIndex, x, length);
-    }
-
-    public void setNClob(int parameterIndex, NClob x) throws SQLException {
-        to.setNClob(parameterIndex, x);
-    }
-
-    public void setNClob(int parameterIndex, Reader x) throws SQLException {
-        to.setNClob(parameterIndex, x);
-    }
-
-    public void setNClob(int parameterIndex, Reader x, long length) throws SQLException {
-        to.setNClob(parameterIndex, x, length);
-    }
-
-    public void setNString(int parameterIndex, String x) throws SQLException {
+    public final void setNString(int parameterIndex, String x) throws SQLException {
+        onSetParamValue(parameterIndex, x);
         to.setNString(parameterIndex, x);
     }
 
-    public void setRowId(int parameterIndex, RowId x) throws SQLException {
+    public final void setRowId(int parameterIndex, RowId x) throws SQLException {
+        onSetParamValue(parameterIndex, x);
         to.setRowId(parameterIndex, x);
     }
 
-    public void setSQLXML(int parameterIndex, SQLXML x) throws SQLException {
+    public final void setSQLXML(int parameterIndex, SQLXML x) throws SQLException {
+        onSetParamValue(parameterIndex, x);
         to.setSQLXML(parameterIndex, x);
     }
-
     
-//
-//    private static String objToString(Object x) {
-//        String textValue;
-//        if (x == null) {
-//            textValue = "null";
-//        } else if (x instanceof String) {
-//            textValue = "'" + x + "'";
-//        } else if (x instanceof Character) {
-//            textValue = "'" + x + "'";
-//        } else if (x instanceof Boolean) {
-//            boolean b = ((Boolean) x).booleanValue();
-//            textValue = (b)? "'1'" : "'0'";
-//        } else if (x instanceof Long) {
-//            textValue = ((Long) x).toString();
-//        } else if (x instanceof Integer) {
-//            textValue = ((Integer) x).toString();
-//        } else if (x instanceof BigDecimal) {
-//            textValue = ((BigDecimal) x).toString();
-//        } else if (x instanceof java.sql.Timestamp) {
-//            textValue = ParamInfo.formatOracleToTimestamp((java.sql.Timestamp) x);
-//        } else if (x instanceof java.sql.Time) {
-//            textValue = ParamInfo.formatOracleToTime((java.sql.Time) x);;
-//        } else if (x instanceof java.sql.Date) {
-//            textValue = ParamInfo.formatOracleToDate((java.sql.Date) x);
-//        } else if (x instanceof java.util.Date) {
-//            textValue = ParamInfo.formatOracleToDate((java.util.Date) x);
-//        } else if (x instanceof long[]) {
-//            long[] arr = (long[]) x;
-//            StringBuffer sb = new StringBuffer(arr.length * 7);
-//            sb.append("[ ");
-//            int len = arr.length;
-//            int displayLen = (len > 10)? 10 : len; 
-//            for (int i = 0; i < displayLen; i++) {
-//                sb.append(Long.toString(arr[i]));
-//                if (i + 1 < len)
-//                    sb.append(',');
-//            }
-//            if (displayLen != len) {
-//                sb.append(" /* ... truncated " + displayLen + "/" + len +  "... */ ");
-//                sb.append("\n");
-//            }
-//            sb.append(" ]");
-//            textValue = sb.toString();
-//        } else if (x instanceof BigDecimal[]) {
-//            BigDecimal[] arr = (BigDecimal[]) x;
-//            StringBuffer sb = new StringBuffer(arr.length * 7);
-//            sb.append("[ ");
-//            int len = arr.length;
-//            int displayLen = (len > 10)? 10 : len; 
-//            for (int i = 0; i < displayLen; i++) {
-//                sb.append(arr[i]);
-//                if (i + 1 < len)
-//                    sb.append(',');
-//            }
-//            if (displayLen != len) {
-//                sb.append(" /* ... truncated " + displayLen + "/" + len +  "... */ ");
-//                sb.append("\n");
-//            }
-//            sb.append(" ]");
-//            textValue = sb.toString();
-//        } else {
-//            textValue = x.toString();
-//        }
-//        return textValue;
-//    }
-//
-//    
+    public final void setAsciiStream(int parameterIndex, InputStream x) throws SQLException {
+        onSetParamValue(parameterIndex, x);
+        to.setAsciiStream(parameterIndex, x);
+    }
+
+    public final void setAsciiStream(int parameterIndex, InputStream x, long length) throws SQLException {
+        onSetParamValue(parameterIndex, new ParamInfo.PairValueWithLength(x, length));
+        to.setAsciiStream(parameterIndex, x, length);
+    }
+
+    public final void setBinaryStream(int parameterIndex, InputStream x) throws SQLException {
+        onSetParamValue(parameterIndex, x);
+        to.setBinaryStream(parameterIndex, x);
+    }
+
+    public final void setBinaryStream(int parameterIndex, InputStream x, long length) throws SQLException {
+        onSetParamValue(parameterIndex, new ParamInfo.PairValueWithLength(x, length));
+        to.setBinaryStream(parameterIndex, x, length);
+    }
+
+    public final void setBlob(int parameterIndex, InputStream x) throws SQLException {
+        onSetParamValue(parameterIndex, x);
+        to.setBlob(parameterIndex, x);
+    }
+
+    public final void setBlob(int parameterIndex, InputStream x, long length) throws SQLException {
+        onSetParamValue(parameterIndex, new ParamInfo.PairValueWithLength(x, length));
+        to.setBlob(parameterIndex, x, length);
+    }
+
+    public final void setCharacterStream(int parameterIndex, Reader x) throws SQLException {
+        onSetParamValue(parameterIndex, x);
+        to.setCharacterStream(parameterIndex, x);
+    }
+
+    public final void setCharacterStream(int parameterIndex, Reader x, long length) throws SQLException {
+        onSetParamValue(parameterIndex, new ParamInfo.PairValueWithLength(x, length));
+        to.setCharacterStream(parameterIndex, x, length);
+    }
+
+    public final void setClob(int parameterIndex, Reader x) throws SQLException {
+        onSetParamValue(parameterIndex, x);
+        to.setClob(parameterIndex, x);
+    }
+
+    public final void setClob(int parameterIndex, Reader x, long length) throws SQLException {
+        onSetParamValue(parameterIndex, new ParamInfo.PairValueWithLength(x, length));
+        to.setClob(parameterIndex, x, length);
+    }
+
+    public final void setNCharacterStream(int parameterIndex, Reader x) throws SQLException {
+        onSetParamValue(parameterIndex, x);
+        to.setNCharacterStream(parameterIndex, x);
+    }
+
+    public final void setNCharacterStream(int parameterIndex, Reader x, long length) throws SQLException {
+        onSetParamValue(parameterIndex, new ParamInfo.PairValueWithLength(x, length));
+        to.setNCharacterStream(parameterIndex, x, length);
+    }
+
+    public final void setNClob(int parameterIndex, NClob x) throws SQLException {
+        onSetParamValue(parameterIndex, x);
+        to.setNClob(parameterIndex, x);
+    }
+
+    public final void setNClob(int parameterIndex, Reader x) throws SQLException {
+        onSetParamValue(parameterIndex, x);
+        to.setNClob(parameterIndex, x);
+    }
+
+    public final void setNClob(int parameterIndex, Reader x, long length) throws SQLException {
+        onSetParamValue(parameterIndex, new ParamInfo.PairValueWithLength(x, length));
+        to.setNClob(parameterIndex, x, length);
+    }
+
+    // ------------------------------------------------------------------------
+
+    @Override
+    public String toString() {
+        return "SefPreparedStatementProxy [sqlQuery=" + sqlQuery + "]";
+    }
+
 }
